# TarotCaster

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  Globals.cpp  Globals.h  KNOWN_ISSUES.md  LICENSE  README.md  RELEASES.md  TarotCaster.desktop  cardloader.cpp  cardloader.h  cardmeaning.cpp  cardmeaning.h  customspreaddesigner.cpp  customspreaddesigner.h  dockcontrols.cpp  dockcontrols.h  donationdialog.cpp  donationdialog.h  helpdialog.cpp  helpdialog.h  importphysicaldialog.cpp  importphysicaldialog.h  io.github.alamahant.TarotCaster-local.yml  io.github.alamahant.TarotCaster.desktop  io.github.alamahant.TarotCaster.metainfo.xml  io.github.alamahant.TarotCaster.yaml  io.github.alamahant.TarotCaster.yml  journalcalendar.cpp  journalcalendar.h  journaldialog.cpp  journaldialog.h  journalmanager.cpp  journalmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  meaningdisplay.cpp  (+15 more)
resources/: tarotcaster.css
screenshots/: README.md
